--- a/tracker-app/tsconfig.app.json
+++ b/tracker-app/tsconfig.app.json
@@ -1,4 +1,4 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
+// tracker-app/tsconfig.app.json
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
@@ -8,9 +8,7 @@
     ]
   },
   "files": [
-    "src/main.ts",
-    "src/main.server.ts",
-    "server.ts"
+    "src/main.ts"
   ],
   "include": [
     "src/**/*.d.ts"
