--- a/tracker-server-basic/tracker-server-basic/dockerfile
+++ b/tracker-server-basic/tracker-server-basic/dockerfile
@@ -2,7 +2,7 @@ FROM node:18-alpine
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
-RUN npm install -g ts-node typescript
+RUN npm install -g ts-node typescript nodemon
 COPY . .
 EXPOSE 3000
-CMD ["npm", "run", "dev"]
+CMD ["node", "app.js"]
