--- a/tracker-server-basic/tracker-server-basic/package.json
+++ b/tracker-server-basic/tracker-server-basic/package.json
@@ -23,6 +23,8 @@
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
     "ts-node": "^10.9.2",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0"
   }
 }
