--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml (create in project root)
 version: '3.8'
 services:
   database:
@@ -18,6 +17,8 @@ services:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
+    networks:
+      - tracker-network
 
   backend:
     build:
@@ -38,6 +39,18 @@ services:
     volumes:
       - ./tracker-server-basic/tracker-server-basic:/app
       - /app/node_modules
+    networks:
+      - tracker-network
+    # Fix DNS and external connectivity
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   mysql_data:
+
+networks:
+  tracker-network:
+    driver: bridge
